--- a/src/PocketLib/Pages/MainPage.xaml
+++ b/src/PocketLib/Pages/MainPage.xaml
@@ -5,11 +5,12 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:controls="clr-namespace:PocketLib.Pages.Views"
              xmlns:pages="clr-namespace:PocketLib.Pages"
+             x:Name="Root"
              x:Class="PocketLib.Pages.MainPage">
    
     <ScrollView>
         <StackLayout>
-            <Grid>
+            <Grid Margin="5">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="2*"/>
                     <ColumnDefinition  Width="7*"/>
@@ -17,13 +18,14 @@
                 </Grid.ColumnDefinitions>
                 <Button 
                     Text="Modifier"
+                    FontSize="16"
                     FontAttributes="Bold"
                     HorizontalOptions="Center"
                 />
                 <ImageButton 
                     Grid.Column="2"
                     Source="plus.svg"
-                    MaximumWidthRequest="16"
+                    MaximumWidthRequest="20"
                     HorizontalOptions="Center"
                     the49:ContextMenu.ShowMenuOnClick="True"
                 >
@@ -39,7 +41,7 @@
                                     <the49:Action Title="Scanner des codes-barres" />
                                 </the49:Group>
                                 <the49:Action Title="Rechercher en ligne" />
-                                <the49:Action Title="Saisir l'ISBN" />
+                                <the49:Action Title="Saisir l'ISBN"  Command="{Binding MainPageVM.AddBookToCollectionByIsbnCommand,Source={x:Reference Root}}" />
                             </the49:Menu>
                         </DataTemplate>
                     </the49:ContextMenu.Menu>
@@ -63,7 +65,7 @@
             <controls:ButtonView
                 Label="Tous"
                 Image="monochrome_tray_2_fill.svg"
-                Count="42"
+                Count="{Binding MainPageVM.Mgr.NbBooks, Source={x:Reference Root}}"
                 ActionCommand="{Binding MainPageVM.GoToAndLoadCommand}"
                 ActionCommandParameter="ListPage"
              />
