:sparkles: ajout de la page filtré A lire plus tard, fonctionne

--- a/src/PocketLib/AppShell.xaml
+++ b/src/PocketLib/AppShell.xaml
@@ -16,10 +16,12 @@
         <ShellContent
             Title="Ma liste"
             Icon="monochrome_list_bullet.svg"
+            ContentTemplate="{DataTemplate pages:TempPage}"
         />
         <ShellContent
             Title="Mes lectures"
             Icon="monochrome_bookmark_fill.svg"
+            ContentTemplate="{DataTemplate pages:TempPage}"
         />
         <ShellContent
             Title="Recherche"
