--- a/src/PocketLib/Pages/MainPage.xaml
+++ b/src/PocketLib/Pages/MainPage.xaml
@@ -65,9 +65,9 @@
             <controls:ButtonView
                 Label="Tous"
                 Image="monochrome_tray_2_fill.svg"
-                Count="{Binding MainPageVM.Mgr.NbBooks, Source={x:Reference Root}}"
+                Count="{Binding MainPageVM.Mgr.NbBooksAll, Source={x:Reference Root}}"
                 ActionCommand="{Binding MainPageVM.GoToAndLoadCommand}"
-                ActionCommandParameter="ListPage"
+                ActionCommandParameter="Tous"
              />
 
             <BoxView HeightRequest="0.5" Color="LightGray" Margin="20,0,0,0"/>
@@ -76,7 +76,7 @@
                 Label="En prêt"
                 Image="monochrome_person_badge_clock_fill.svg"
                 ActionCommand="{Binding MainPageVM.GoToAndLoadCommand}"
-                ActionCommandParameter="LoanPage"
+                ActionCommandParameter="PretPage"
              />
 
             <BoxView HeightRequest="0.5" Color="LightGray" Margin="20,0,0,0"/>
@@ -84,6 +84,9 @@
             <controls:ButtonView
                 Label="À lire plus tard"
                 Image="monochrome_arrow_forward.svg"
+                Count="{Binding MainPageVM.Mgr.NbBookToBeRead, Source={x:Reference Root}}"
+                ActionCommand="{Binding MainPageVM.GoToAndLoadCommand}"
+                ActionCommandParameter="ALirePlusTardPage"
              />
 
             <BoxView HeightRequest="0.5" Color="LightGray" Margin="20,0,0,0"/>
@@ -91,6 +94,8 @@
             <controls:ButtonView
                 Label="Statut de lecture"
                 Image="monochrome_eyeglasses.svg"
+                ActionCommand="{Binding MainPageVM.GoToAndLoadCommand}"
+                ActionCommandParameter="StatusPage"
              />
             
             <BoxView HeightRequest="0.5" Color="LightGray" Margin="20,0,0,0"/>
@@ -98,6 +103,7 @@
             <controls:ButtonView
                 Label="Favoris"
                 Image="monochrome_heart_fill.svg"
+                ActionCommand="{Binding MainPageVM.GoToAndLoadCommand}"
              />
 
             <BoxView HeightRequest="0.5" Color="LightGray" Margin="20,0,0,0"/>
@@ -105,6 +111,7 @@
             <controls:ButtonView
                 Label="Étiquettes"
                 Image="monochrome_tag_fill.svg"
+                ActionCommand="{Binding MainPageVM.GoToAndLoadCommand}"
              />
 
             <BoxView HeightRequest="0.5" Color="LightGray"/>
@@ -121,6 +128,8 @@
             <controls:ButtonView
                 Label="Auteur"
                 Image="monochrome_person_fill.svg"
+                ActionCommand="{Binding MainPageVM.GoToAndLoadCommand}"
+                ActionCommandParameter="AuteurPage"
              />
 
             <BoxView HeightRequest="0.5" Color="LightGray" Margin="20,0,0,0"/>
@@ -128,6 +137,8 @@
             <controls:ButtonView
                 Label="Date de publication"
                 Image="calendar.svg"
+                ActionCommand="{Binding MainPageVM.GoToAndLoadCommand}"
+                ActionCommandParameter="DatePage"
              />
 
             <BoxView HeightRequest="0.5" Color="LightGray" Margin="20,0,0,0"/>
@@ -135,6 +146,7 @@
             <controls:ButtonView
                 Label="Note"
                 Image="monochrome_sparkles.svg"
+                ActionCommand="{Binding MainPageVM.GoToAndLoadCommand}"
              />
             
             <BoxView HeightRequest="0.5" Color="LightGray"/>
