--- a/src/PocketLib/Pages/TempPage.xaml
+++ b/src/PocketLib/Pages/TempPage.xaml
@@ -1,11 +1,22 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:views="clr-namespace:PocketLib.Pages.Views"
              x:Class="PocketLib.Pages.TempPage"
+             Shell.NavBarIsVisible="True"
+             x:Name="Root"
              Title="TempPage">
+    
+    <Shell.TitleView>
+        <views:HeaderView
+            Label="Empty page"
+        >
+        </views:HeaderView>
+    </Shell.TitleView>
+    
     <VerticalStackLayout>
         <Label 
-            Text="THIS IS A TEMP PAGE (NO UI FOR THIS PAGE ATM)"
+            Text="This page is currently not available"
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
     </VerticalStackLayout>
